# english-coach-v2

./: settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-bridge.c
app/src/main/java/com/example/englishcoach/: LLMEngine.java  MainActivity.java  ModelDownloadManager.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
